# model_doc_automation

./: .gitignore  BSM_simple.ipynb  LangGraph_output.txt  README.md  REPORT_GENERATOR_README.md  bsm_utils.py  check_prompt_size.py  debug_llm_tool_call.py  debug_summary_in_notebook.py  dummy_options.csv  main.py  pyproject.toml  requirements.txt  template.ipynb  test_chart_tool.py  test_refactor.py  test_summary_generator_simple.py  testing.ipynb  verify_injected_state.py
.ipynb_checkpoints/: bsm_utils-checkpoint.py  testing-checkpoint.ipynb
RH_vnn_files/: pricing_validator.py  pricing_validator_node.py  server.py  state.py
archive/: MULTI_AGENT_README.md  black_scholes.py  bsm_utils.py  chart_tools.py  main.py  pnl_explain_test.py  real_trade_data.py  test_tools.py
archive/scripts/: run_simple_calculation.py
data/cache/: dummy_options_bsm_results.csv  dummy_options_bsm_results_gamma_pos.csv  dummy_options_greeks_results.csv  dummy_options_greeks_results_pnl_test_results.csv  dummy_options_greeks_results_stress_test_results.csv  dummy_options_greeks_results_validate_results.csv  dummy_options_summary.docx  final_OPA_report.docx  final_report.docx  sample_output.docx  stress_test_20251224_185703.csv
data/input/: dummy_options.csv  dummy_options_good.csv  dummy_options_old.csv  dummy_options_small.csv  simulated_equity_options.csv
data/output/: OPA_Report_092444.docx  OPA_Report_105627.docx  OPA_Report_130948.docx  OPA_Report_131116.docx  OPA_Report_131825.docx  OPA_Report_132544.docx  OPA_Report_133000.docx  OPA_Report_133405.docx  OPA_Report_140637.docx  OPA_Report_140754.docx  OPA_Report_142007.docx  (+38 more)
document-automation-app/: README.md  dev.ipynb  requirements.txt
scripts/: data_simulator.py  demo.py  generate_complex_data.py
temp/: data_loader_tools.py  report_generator_node.py
tests/: quick_verify.py  test_calculator_agent.py  test_data_loader_agent.py  test_dynamic_tools.py  test_greeks.py  test_tester_agent.py  verify_graph.py
(+196 files in other folders)
