[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-doc-automation"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.1.0",
    "langchain>=1.0.2",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=4.1.3",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=3.0.0",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "mcp>=1.22.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "python-docx>=1.2.0",
    "scipy>=1.16.2",
    "streamlit>=1.53.0",
    "tabulate>=0.9.0",
]



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
]

